--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
     <div class="lockedContent" id="lockedContent">
       <h3>Documents déverrouillés</h3>
-      <p>Télécharge les fichiers ci-dessous :</p>
       <ul>
-        <li><a href="docs/document1.pdf" download>Attestation de droit</a></li>
-        <li><a href="docs/document2.txt" download>Document 2 (TXT)</a></li>
+        <li><a href="fichiers/attestation de droits.png" download>Attestation de droit</a></li>
+        <li><a href="fichiers/contrat d'apprentissage.pdf" download>Contrat d'apprentissage</a></li>
+        <li><a href="fichiers/titre de séjour.png" download>Titre de séjour</a></li>
       </ul>
     </div>
   </div>
