--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="lockedContent" id="lockedContent">
       <h3>Documents déverrouillés</h3>
       <ul>
-        <li><a href="fichiers/attestation de droits.png" download>Attestation de droit</a></li>
-        <li><a href="fichiers/contrat d'apprentissage.pdf" download>Contrat d'apprentissage</a></li>
-        <li><a href="fichiers/titre de séjour.png" download>Titre de séjour</a></li>
+        <li><a href="fichiers/attestation de droits.png">Attestation de droit</a></li>
+        <li><a href="fichiers/contrat d'apprentissage.pdf">Contrat d'apprentissage</a></li>
+        <li><a href="fichiers/titre de séjour.png">Titre de séjour</a></li>
       </ul>
     </div>
   </div>
